--- a/pixi.toml
+++ b/pixi.toml
@@ -8,7 +8,7 @@ platforms = ["linux-64", "osx-64"]
 license = "MIT"
 license-file = "LICENSE"
 readme = "readme.org"
-repository = "https://github.com/HaoZeke/xtsci-saddle"
+repository = "https://github.com/xtslibs/xtensor-fmt"
 
 [tasks]
 
